--- a/Framework/CMakeLists.txt
+++ b/Framework/CMakeLists.txt
@@ -13,16 +13,17 @@ target_link_libraries(${LIBRARY_NAME}
         dxguid.lib
         D3DCompiler.lib
         "${GLFW_PATH}/lib-vc2015/glfw3.lib"
+        "${ASSIMP_PATH}/lib/x64/assimp-vc140-mt.lib"
 )
 
 set(STB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../External/stb/")
 
 target_include_directories(${LIBRARY_NAME}
     PUBLIC
-        "${CMAKE_CURRENT_SOURCE_DIR}"
         "${CMAKE_CURRENT_SOURCE_DIR}/include/fw"
         "${GLFW_PATH}/include"
         "${STB_PATH}"
+        "${ASSIMP_PATH}/include"
 )
 
 target_compile_features(${LIBRARY_NAME} 
