Start working on MotionBlur

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,4 @@ add_definitions(-DASSET_PATH="${CMAKE_CURRENT_SOURCE_DIR}/Assets/")
 add_subdirectory(Framework)
 add_subdirectory(Examples/Minimal)
 add_subdirectory(Examples/Glow)
+add_subdirectory(Examples/MotionBlur)
