Start working on DXR example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,4 @@ add_subdirectory(Framework)
 add_subdirectory(Examples/Minimal)
 add_subdirectory(Examples/Glow)
 add_subdirectory(Examples/MotionBlur)
+add_subdirectory(Examples/DXR)
