DXR: Create state object

--- a/Examples/DXR/CMakeLists.txt
+++ b/Examples/DXR/CMakeLists.txt
@@ -7,6 +7,12 @@ COMMAND ${CMAKE_COMMAND} -E copy_if_different
 )
 
 add_custom_command(TARGET DXR POST_BUILD
+COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    "${CMAKE_CURRENT_SOURCE_DIR}/dxil.dll"
+    $<TARGET_FILE_DIR:DXR>
+)
+
+add_custom_command(TARGET DXR POST_BUILD
 COMMAND ${CMAKE_COMMAND} -E copy_directory
     "${CMAKE_CURRENT_SOURCE_DIR}/shaders/"
     "${CMAKE_BINARY_DIR}/Examples/DXR/"
