Dynamic index: Start working on example, use index to matrix and texture arrays (non-dynamic)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,3 +52,4 @@ add_subdirectory(Examples/Minimal)
 add_subdirectory(Examples/Glow)
 add_subdirectory(Examples/MotionBlur)
 add_subdirectory(Examples/DXR)
+add_subdirectory(Examples/DynamicIndexing)
