Start working on marching cubes example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,3 +53,4 @@ add_subdirectory(Examples/Glow)
 add_subdirectory(Examples/MotionBlur)
 add_subdirectory(Examples/DXR)
 add_subdirectory(Examples/DynamicIndexing)
+add_subdirectory(Examples/MarchingCubes)
