--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,3 +54,4 @@ add_subdirectory(Examples/MotionBlur)
 add_subdirectory(Examples/DXR)
 add_subdirectory(Examples/DynamicIndexing)
 add_subdirectory(Examples/MarchingCubes)
+add_subdirectory(Examples/RWTexture)
